[project]
name = "puddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "protobuf>=6.31.0",
    "ruff>=0.11.10",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
]
